# simple-tad

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: ci.yaml
benchmarks/: benchmark.cpp
include/: constants.h  hi-c.h  types.h
simple-tad/: main.py
src/: baum_welch.hpp  di.hpp  main.cpp  viterbi.py  wrapper.cpp
src/example/: viterbi.cu
src/lib/: baum_welch.hpp  baum_welch_gaussian.hpp  baum_welch_loglik.hpp  coord.hpp  di.hpp  read_data.hpp  viterbi.cuh  viterbi.hpp  viterbi_gaussion.hpp  viterbi_gaussion_simd.hpp  viterbi_simd.hpp
src/test/: baum_welch.cpp  viterbi_test.cpp
tests/: baum_welch.cpp  baum_welch_class.cpp  baum_welch_gaussian.cpp  log.txt  plot.py  test  test.cpp
